--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
               git fetch --all &&
               git pull origin master &&
               docker-compose build && 
-              docker-compose up -d'
+              docker-compose restart'
