--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
               ssh -vvv -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
 
               # Now we have got the access of EC2 and we will start the deploy .
-              cd /home/runner/django-crud-app &&
-              git fetch --all &&
-              git pull origin master &&
-              docker-compose build && 
-              docker-compose restart'
+              cd /root/django &&
+              git clone git@github.com:sravankml/django-crud-app.git &&
+              git pull origin master '
+              # docker-compose build && 
+              # docker-compose restart'
