--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
               ssh -vvv -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
 
               # Now we have got the access of EC2 and we will start the deploy .
-              cd /root/django &&
+              cd /root/django/django-crud-app &&
               git pull origin master '
               # docker-compose build && 
               # docker-compose restart'
